languages/io-automaton-fe/src/test/resources/valid/alternatives/ListAsTransitionOutput.ioautomaton
package valid.alternatives;

automaton ListAsTransitionOutput {

  output Boolean b;
   
  state S;
  initial S;
    
  S -> S / {b = [true, false, true]};    


}