languages/io-automaton-fe/src/test/resources/invalid/OutputValueListContainsWrongType.ioautomaton
package invalid;

automaton OutputValueListContainsWrongType {

  output Boolean b;
   
  state S;
  initial S;
    
  S -> S / {b = [true, "string", true]};    


}